--- a/index.html
+++ b/index.html
@@ -1,16 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
-    
+    <title>One millions </title>
+
 </head>
 
 <body>
 
+    <header>
+        <nav>
+            <!-- Logo -->
+            <a href="index.html"><img src="/images/top-logo.png" alt="logo"></a>
+
+            <!--menu mobile-->
+
+            <a href="#"><img src="/images/icons/list.svg" alt="menu"></a>
+
+
+            <!--menu desktop -->
+            <ul>
+                <li><a href="#">Who we are</a></li>
+                <li><a href="#">Get involved</a></li>
+            </ul>
+        </nav>
+
+        <section>
+            <div class="container">
+                <h1>
+                    Our goal is to inspire Tallahassee to write 1,000,000 lines of code_
+                </h1>
+                <p>
+                    All over the country people are taking the <span class="bold uppercase">hour of code</span>challenge
+                    issued
+                    by<span class="bold uppercase">code</span><span class="bold">.org</span>. Milions of code are being
+                    written. In the capital of Florida,
+                    Tallahassee,
+                    the
+                    community is taking the challenge and our goal is to write 1,000,000 lines of code_
+                </p>
+                <a href="Learn more">Learn more</a>
+                <img src="/images/code.png" alt="code">
+            </div>
+        </section>
+
+    </header>
+
+    <main>
+
+        <section class="container">
+
+            <img src="/images/academy-brand-med.png" alt="icon academy">
+
+            <h2>
+                who we are
+            </h2>
+            <div class="separator"></div>
+            <p>
+                We are <span><span class="uppercase">massive</span>Academy</span>. We aim to improve education through
+                both method - effective
+                project-based learning - and material - by teaching skills that are applicable to improving your life
+                today.
+            </p>
+        </section>
+
+        <section class="container">
+
+            <h2>
+                Get involved
+            </h2>
+            <div class="separator"></div>
+
+            <div class="cards">
+                <!--card 1-->
+                <div>
+                    <div class="circle">
+                        <img src="/images/icons/person-fill.svg" alt="students">
+                    </div>
+                    <h3>Students</h3>
+                    <p>
+                        Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and
+                        we'll
+                        let
+                        you
+                        know how to get involved.
+                    </p>
+                    <a href="#">Start learning >></a>
+                </div>
+
+                <!--card 2 -->
+                <div>
+                    <div class="circle">
+                        <img src="/images/icons/pencil-fill.svg" alt="educators">
+                    </div>
+                    <h3>Educators</h3>
+                    <p>
+                        Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and
+                        we'll
+                        let
+                        you
+                        know how to get involved.
+                    </p>
+                    <a href="#">Join the initiative >></a>
+                </div>
+
+                <!--card 3 -->
+                <div>
+                    <div class="circle">
+                        <img src="/images/icons/cash.svg" alt="sponsors">
+                    </div>
+                    <h3>Sponsors</h3>
+                    <p>
+                        Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and
+                        we'll
+                        let
+                        you
+                        know how to get involved.
+                    </p>
+                    <a href="#">Give support >></a>
+                </div>
+            </div>
+
+
+
+
+        </section>
+
+    </main>
+
+    <footer>
+        <a href="index.html"><img src="/images/one-million-bottom-brand.png" alt="logo"></a>
+    </footer>
 
 
 
@@ -22,6 +146,7 @@
 
 
 
-    
+
 </body>
+
 </html>
