--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 <body>
 
     <header>
+
         <nav>
+            <div class="container">
             <!-- Logo -->
             <a href="index.html"><img src="/images/top-logo.png" alt="logo"></a>
 
             <!--menu mobile-->
 
-            <a href="#"><img src="/images/icons/list.svg" alt="menu"></a>
+            <a href="#"><img src="/images/icons/list.svg" alt="menu" class="menu-icon"></a>
 
 
             <!--menu desktop -->
@@ -27,6 +29,7 @@
                 <li><a href="#">Who we are</a></li>
                 <li><a href="#">Get involved</a></li>
             </ul>
+            </div>
         </nav>
 
         <section>
@@ -35,18 +38,21 @@
                     Our goal is to inspire Tallahassee to write 1,000,000 lines of code_
                 </h1>
                 <p>
-                    All over the country people are taking the <span class="bold uppercase">hour of code</span>challenge
+                    All over the country people are taking the <span class="bold uppercase">hour of
+                        code</span> challenge
                     issued
-                    by<span class="bold uppercase">code</span><span class="bold">.org</span>. Milions of code are being
+                    by<span class="bold uppercase"> code</span><span class="bold">.org</span>. Milions of code are
+                    being
                     written. In the capital of Florida,
                     Tallahassee,
                     the
                     community is taking the challenge and our goal is to write 1,000,000 lines of code_
                 </p>
-                <a href="Learn more">Learn more</a>
-                <img src="/images/code.png" alt="code">
+                <a href="Learn more" class="btn-orange" >Learn more</a>
+                <img src="/images/code.png" alt="code" class="img-code">
             </div>
         </section>
+
 
     </header>
 
@@ -60,15 +66,15 @@
                 who we are
             </h2>
             <div class="separator"></div>
-            <p>
-                We are <span><span class="uppercase">massive</span>Academy</span>. We aim to improve education through
+            <p class="container">
+                We are <span class="uppercase orange"> massive Academy</span>. We aim to improve education through
                 both method - effective
                 project-based learning - and material - by teaching skills that are applicable to improving your life
                 today.
             </p>
         </section>
 
-        <section class="container">
+        <section>
 
             <h2>
                 Get involved
@@ -82,14 +88,14 @@
                         <img src="/images/icons/person-fill.svg" alt="students">
                     </div>
                     <h3>Students</h3>
-                    <p>
+                    <p class="container">
                         Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and
                         we'll
                         let
                         you
                         know how to get involved.
                     </p>
-                    <a href="#">Start learning >></a>
+                    <a class="btn-light" href="#">Start learning >></a>
                 </div>
 
                 <!--card 2 -->
@@ -98,14 +104,14 @@
                         <img src="/images/icons/pencil-fill.svg" alt="educators">
                     </div>
                     <h3>Educators</h3>
-                    <p>
+                    <p class="container">
                         Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and
                         we'll
                         let
                         you
                         know how to get involved.
                     </p>
-                    <a href="#">Join the initiative >></a>
+                    <a class="btn-light" href="#">Join the initiative >></a>
                 </div>
 
                 <!--card 3 -->
@@ -114,14 +120,14 @@
                         <img src="/images/icons/cash.svg" alt="sponsors">
                     </div>
                     <h3>Sponsors</h3>
-                    <p>
+                    <p class="container">
                         Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and
                         we'll
                         let
                         you
                         know how to get involved.
                     </p>
-                    <a href="#">Give support >></a>
+                    <a class="btn-light" href="#">Give support >></a>
                 </div>
             </div>
 
@@ -133,7 +139,9 @@
     </main>
 
     <footer>
+        <div class="container">
         <a href="index.html"><img src="/images/one-million-bottom-brand.png" alt="logo"></a>
+    </div>
     </footer>
 
 
